--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,8 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# local plans and rules (do not push)
+/PLAN.md
+/PLAN-phase-0.md
+/.cursorrules
